--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -14,11 +14,11 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "type": "commonjs",
   "description": "",
   "dependencies": {
     "@prisma/client": "^6.2.1",
     "@types/bcrypt": "^5.0.2",
+    "@types/handlebars": "^4.0.40",
     "bcrypt": "^5.1.1",
     "cloudinary": "^2.5.1",
     "cors": "^2.8.5",
@@ -27,7 +27,7 @@
     "express": "^4.21.2",
     "fs": "^0.0.1-security",
     "handlebars": "^4.7.8",
-    "jsonwebtoken": "^9.0.2",
+    "jsonwebtoken": "^9.0.3",
     "multer": "^1.4.5-lts.1",
     "node-cron": "^3.0.3",
     "nodemailer": "^6.10.0",
