--- a/turbo.json
+++ b/turbo.json
@@ -5,7 +5,15 @@
     "build": {
       "dependsOn": ["^build"],
       "inputs": ["$TURBO_DEFAULT$", ".env*"],
-      "outputs": [".next/**", "!.next/cache/**", ".vercel/**"]
+      "outputs": [".next/**", "!.next/cache/**", ".vercel/**"],
+      "env": [
+        "DATABASE_URL",
+        "DATABASE_DIRECT_URL",
+        "ACCESS_TOKEN_SECRET",
+        "REFRESH_TOKEN_SECRET",
+        "NODEMAILER_USER",
+        "NODEMAILER_PASS"
+      ]
     },
     "lint": {
       "dependsOn": ["^lint"]
