--- a/turbo.json
+++ b/turbo.json
@@ -7,12 +7,8 @@
       "inputs": ["$TURBO_DEFAULT$", ".env*"],
       "outputs": [".next/**", "!.next/cache/**", ".vercel/**"],
       "env": [
-        "DATABASE_URL",
-        "DATABASE_DIRECT_URL",
-        "ACCESS_TOKEN_SECRET",
-        "REFRESH_TOKEN_SECRET",
-        "NODEMAILER_USER",
-        "NODEMAILER_PASS"
+        "AUTH_SECRET",
+        "NEXT_PUBLIC_API_BASE_URL"
       ]
     },
     "lint": {
