--- a/package.json
+++ b/package.json
@@ -23,7 +23,10 @@
     "packages/*"
   ],
   "dependencies": {
+    "next": "^16.1.1",
+    "react": "^19.2.3",
     "react-datepicker": "^7.6.0",
+    "react-dom": "^19.2.3",
     "react-time-picker": "^7.0.0"
   }
 }
