--- a/package.json
+++ b/package.json
@@ -21,13 +21,7 @@
   "engines": {
     "node": ">=18"
   },
-  "packageManager": "npm@10.8.3",
+  "packageManager": "npm@10.8.3"
  
-  "dependencies": {
-    "next": "^16.1.1",
-    "react": "^19.2.3",
-    "react-datepicker": "^7.6.0",
-    "react-dom": "^19.2.3",
-    "react-time-picker": "^7.0.0"
-  }
+  
 }
