--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -46,6 +46,7 @@
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
     "react-hot-toast": "^2.5.2",
+    "react-icons": "^5.5.0",
     "recharts": "^2.15.1",
     "sonner": "^2.0.7",
     "sweetalert2": "^11.17.2",
