--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "mini-project",
   "private": true,
-   "workspaces": [
+  "workspaces": [
     "apps/*",
     "packages/*"
   ],
@@ -15,6 +15,7 @@
   "devDependencies": {
     "@repo/typescript-config": "^0.0.0",
     "prettier": "^3.2.5",
+    "ts-node": "^10.9.2",
     "turbo": "^2.3.4",
     "typescript": "5.5.4"
   },
@@ -22,6 +23,4 @@
     "node": ">=18"
   },
   "packageManager": "npm@10.8.3"
- 
-  
 }
