--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -32,6 +32,7 @@
     "node-cron": "^3.0.3",
     "nodemailer": "^6.10.0",
     "path": "^0.12.7",
+    "ts-node": "^10.9.2",
     "zod": "^3.24.1"
   },
   "devDependencies": {
